# Mirrarr

./: .cursorrules  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  moneypatches.py  pyproject.toml  rivesolver.py
.agent/: Instructions.md
.agent/rules/: project-rules.md
.agent/workflows/: init.md
.github/workflows/: tests.yml
app/: main.py
app/api/: routes_api.py  routes_ui.py
app/core/: auth.py  config.py  database.py
app/models/: media.py
app/providers/: __init__.py  a111477_provider.py  acermovies_provider.py  base.py  directory_list_provider.py  dummy_provider.py  rivestream_provider.py  test_provider.py  vadapav_provider.py
app/services/: download_manager.py  search.py  tmdb.py
app/static/: style.css
app/templates/: base.html  dashboard.html  downloads.html
app/templates/partials/: auto_button.html  auto_download.html  download_list.html  provider_loading.html  provider_modal.html  provider_result.html  search_results.html  series_modal.html  toast.html
rivestream/: video_providers.js
tests/: test_acermovies_provider.py  test_download_queue.py  test_preferred_provider.py  test_refactors.py  test_rivesolver.py  test_routes_async.py  test_security_refactor.py  verify_refactors.py
