[project]
name = "mirarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "niquests>=3.17.0",
    "python-dotenv>=1.2.1",
    "tmdbsimple>=2.9.1",
]
[tool.uv]
override-dependencies = [
    "requests==2.32.5; sys_platform != 'none'" 
]
