[project]
name = "mirarr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.34.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "celery>=5.5.0",
    "redis>=5.2.1",
    "niquests>=3.17.0",
    "python-dotenv>=1.2.1",
    "tmdbsimple>=2.9.1",
    "pydantic-settings>=2.12.0",
    "beautifulsoup4>=4.14.3",
    "yt-dlp>=2026.2.4",
    "yt-dlp-ejs>=0.4.0",
    "cachetools>=7.0.0",
]
[tool.uv]
override-dependencies = [
    "requests==2.32.5; sys_platform != 'none'" 
]

[dependency-groups]
dev = [
    "ipython>=9.10.0",
    "pytest>=9.0.2",
]
