[project]
name = "mirarr"
version = "1.0.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn[standard]>=0.38.0",
    "jinja2>=3.1.5",
    "python-multipart>=0.0.21",
    "sqlmodel>=0.0.27",
    "niquests>=3.17.0",
    "python-dotenv>=1.2.1",
    "tmdbsimple>=2.9.1",
    "pydantic-settings>=2.12.0",
    "beautifulsoup4>=4.14.3",
    "yt-dlp>=2026.2.4",
    "yt-dlp-ejs>=0.4.0",
    "cachetools>=7.0.0",
]
[tool.uv]
override-dependencies = [
    "requests==2.32.5; sys_platform != 'none'" 
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "ipython>=9.10.0",
    "pytest>=9.0.2",
]
